[feat] 사용자 권한 리스트를 불변 리스트로 변경
1. userDetails 객체를 생성하는 과정에서 가변이었던 기존의 권한 리스트를 불변으로 변경